appId: com.lucassales.flutter_integration_test.dev
---
- launchApp:
    clearState: true
- tapOn: "Email"
- inputText: "member1@e2e.com"
- tapOn: "Senha"
- inputText: "123456"
- tapOn: "Entrar"
- assertVisible: "Home"
- assertVisible: "0"
- tapOn: fabAddIcon
- assertVisible: "1"