appId: com.lucassales.flutter_integration_test.dev
---
- launchApp:
    clearState: true
- extendedWaitUntil:
    visible: "Email"
    timeout: 90000
- tapOn: "Email"
- inputText: "member1@e2e.com"
- tapOn: "Senha"
- inputText: "123456"
- hideKeyboard
- tapOn: "Entrar"
- assertVisible: "Home"